/**
 * 食材情報（将来実装用のプレースホルダー）
 */
export interface Ingredient {
  id: string
  name: string
  category: string
  iconUrl: string | null
}
