/**
 * レシピ情報（将来実装用のプレースホルダー）
 */
export interface Recipe {
  id: string
  title: string
  description: string
  cookingTime: number
  difficulty: number
  servings: number
  genre: string
  imageUrl: string | null
  createdAt: string
  updatedAt: string
}
